--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,12 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape = "rectangle">
-            <gradient
-                android:startColor="#066591"
-                android:centerColor="#34bdea"
-                android:endColor="#76cbee"
-                android:angle="90">
-            </gradient>
+            <solid android:color="#76cbee"></solid>
         </shape>
     </item>
 </layer-list>
