--- a/app/src/main/res/drawable/background_apple.xml
+++ b/app/src/main/res/drawable/background_apple.xml
@@ -2,9 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
+            <solid android:color="@color/black"/>
             <corners android:radius="50dp"/>
-            <stroke android:width="3dp"
-                android:color="@color/verdeCasTraining"/>
+            <padding android:left="20dp"/>
         </shape>
     </item>
+
 </selector>
