--- a/app/src/main/res/drawable/google_signin_btn.xml
+++ b/app/src/main/res/drawable/google_signin_btn.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="50dp"/>
-            <stroke android:width="3dp"
-                android:color="@color/verdeCasTraining"/>
+            <corners android:radius="50dp"></corners>
+            <stroke android:width="0dp"></stroke>
+            <solid android:color="@color/white"></solid>
         </shape>
     </item>
 </selector>
