--- a/app/src/main/res/layout/activity_priv_login.xml
+++ b/app/src/main/res/layout/activity_priv_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Priv_Login"
+    tools:context=".view.PrivLogin"
     android:background="@drawable/background">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guideHorizontal"
+        app:layout_constraintBottom_toTopOf="@+id/guideHorizontal20"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp">
 
@@ -32,7 +32,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideHorizontal"
+        app:layout_constraintTop_toBottomOf="@id/guideHorizontal20"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:endIconMode="password_toggle">
@@ -88,7 +88,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideHorizontal"
+        android:id="@+id/guideHorizontal20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
