--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_logocastraining">
+    <item android:drawable="@color/azulCasTraining"/>
+    <item>
         <bitmap
             android:gravity="center"
-            android:src="@color/black">
+            android:src="@drawable/ic_launcher">
         </bitmap>
     </item>
 </layer-list>
