--- a/app/src/main/res/layout/activity_priv_main.xml
+++ b/app/src/main/res/layout/activity_priv_main.xml
@@ -10,11 +10,12 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:id="@+id/txtInpMail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guideHorizontal20"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        app:layout_constraintTop_toTopOf="@id/guideHorizontal15"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtxtLoginMail"
@@ -26,15 +27,15 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtInpPass1"
+        android:id="@+id/txtInpPass"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideHorizontal20"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtInpMail"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -55,6 +56,7 @@
         android:text="@string/btnInicioCorreo"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/txtInpPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideHorizontal40"
@@ -79,8 +81,8 @@
         style="@style/btnGoogle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/guideHorizontal60"
-        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnNuevoUsuario"
+        android:layout_marginTop="150dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,11 +114,11 @@
     </Button>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideHorizontal20"
+        android:id="@+id/guideHorizontal15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
+        app:layout_constraintGuide_percent="0.15" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideHorizontal40"
         android:layout_width="wrap_content"
@@ -129,6 +131,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.60" />
+
 
 
 
