--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <!--Colores personalizados tema -->
     <color name="verdeCasTraining">#C8DE87</color>
+    <color name="azulCasTraining">#76cbee</color>
+    <color name="naranjaCasTraining">#FF7800</color>
+    <color name="grisCasTraining">#909090</color>
 </resources>
