--- a/app/src/main/res/layout/activity_priv_inicio_apple.xml
+++ b/app/src/main/res/layout/activity_priv_inicio_apple.xml
@@ -7,4 +7,17 @@
     tools:context=".view.PrivInicioApple"
     android:background="@drawable/background">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="En futuras actualizaciones"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
