--- a/app/src/main/res/drawable/background_facebook.xml
+++ b/app/src/main/res/drawable/background_facebook.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#3B5998"/>
-            <corners android:radius="50dp"/>
-            <stroke android:width="0dp"/>
-            <padding android:left="20dp"/>
+        <shape android:shape="oval">
+            <solid android:color="#1877F2"/>
         </shape>
     </item>
 
