--- a/app/src/main/res/layout/activity_priv_api.xml
+++ b/app/src/main/res/layout/activity_priv_api.xml
@@ -13,8 +13,7 @@
         android:id="@+id/edtxtBusqueda"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,8 +23,7 @@
         android:layout_marginTop="10dp"
         android:text="Búsqueda Convocatorias"
         app:layout_constraintEnd_toStartOf="@id/btnCursos"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,8 +33,7 @@
         app:layout_constraintStart_toEndOf="@id/btnConvocatorias"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtxtBusqueda"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_marginTop="10dp"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,8 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnConvocatorias"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_marginTop="10dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,17 +52,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="10dp"
-        android:visibility="invisible"/>
-
-    <ListView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/lstView"
-        app:layout_constraintTop_toBottomOf="@id/txtResultadoBusqueda"
+        android:visibility="invisible"
+        android:scrollbars="vertical"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+        android:id="@+id/rcyView"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/btnBusquedaApi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="invisible">
-    </ListView>
+        android:scrollbars="vertical"
+        android:visibility="invisible" />
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
@@ -77,16 +74,16 @@
         android:max="100"
         android:progress="2"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/lstView"
-        app:layout_constraintStart_toStartOf="@id/lstView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnCursos"
         android:visibility="invisible" />
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/txtProgressBar"
-        app:layout_constraintStart_toStartOf="@id/lstView"
-        app:layout_constraintEnd_toEndOf="@id/lstView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/progressBar"
         android:layout_marginTop="10dp"
         android:text="Cargando..."
@@ -94,6 +91,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/verdeCasTraining"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
