--- a/app/src/main/res/layout/activity_priv_inicio_mail.xml
+++ b/app/src/main/res/layout/activity_priv_inicio_mail.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/btnCerrarSesion"
         android:text="@string/btnCerrarSesion"
+        style="@style/btnApp"
         app:layout_constraintTop_toBottomOf="@+id/txtResultadoLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +42,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"/>
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="10dp"
+        style="@style/btnApp"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideHorizontal15"
