--- a/app/src/main/res/layout/activity_priv_main.xml
+++ b/app/src/main/res/layout/activity_priv_main.xml
@@ -77,42 +77,37 @@
         android:layout_marginTop="10dp"
         tools:ignore="TextContrastCheck">
     </Button>
-    <Button
+    <ImageButton
         android:id="@+id/btnInicioGoogle"
         style="@style/btnGoogle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         app:layout_constraintTop_toBottomOf="@+id/btnNuevoUsuario"
         android:layout_marginTop="150dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="3dp"
+        app:layout_constraintEnd_toStartOf="@id/btnInicioApple"
         app:layout_constraintStart_toStartOf="parent">
-    </Button>
-    <Button
+    </ImageButton>
+    <ImageButton
         android:id="@+id/btnInicioApple"
         style="@style/btnAppleInicio"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btnInicioGoogle"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-    </Button>
-    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnNuevoUsuario"
+        android:layout_marginTop="150dp"
+        app:layout_constraintEnd_toStartOf="@id/btnInicioFacebook"
+        app:layout_constraintStart_toEndOf="@id/btnInicioGoogle">
+    </ImageButton>
+    <ImageButton
         android:id="@+id/btnInicioFacebook"
         style="@style/btnFacebook"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btnInicioApple"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnNuevoUsuario"
+        android:layout_marginTop="150dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-    </Button>
+        app:layout_constraintStart_toEndOf="@id/btnInicioApple">
+    </ImageButton>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideHorizontal15"
