--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,25 +28,41 @@
     <!-- Diseño botón inicio sesión con Apple-->
     <style name="btnAppleInicio">
         <item name="android:background">@drawable/background_apple</item>
-        <item name="android:drawableStart">@drawable/ic_applelogo</item>
+        <item name="android:src">@drawable/ic_applelogo</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:text">@string/btnApple</item>
         <item name="paddingStart">20dp</item>
-
     </style>
     <!-- Diseño botón inicio sesión con Google-->
     <style name="btnGoogle">
         <item name="android:background">@drawable/background_google</item>
-        <item name="android:drawableStart">@drawable/googleg_standard_color_18</item>
+        <item name="android:src">@drawable/googleg_standard_color_18</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:text">@string/btnGoogle</item>
+        <item name="paddingStart">20dp</item>
     </style>
     <!-- Diseño botón inicio sesión con Facebook-->
     <style name="btnFacebook">
         <item name="android:background">@drawable/background_facebook</item>
-        <item name="android:drawableStart">@drawable/ic_logofacebook</item>
+        <item name="android:src">@drawable/ic_logofacebook</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:text">@string/btnFacebook</item>
         <item name="paddingStart">20dp</item>
     </style>
+    <!-- Diseño editText ExpanableListView -->
+    <style name="expanableStyle">
+        <item name="android:background">@drawable/background_expanable</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:paddingStart">30dp</item>
+    </style>
+    <!-- Diseño ExpanableListView view child-->
+    <style name="expanableStyleChild">
+        <item name="android:background">@drawable/background_expanable</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:paddingStart">30dp</item>
+    </style>
+
+
+
+
 </resources>
